More fixes related to missing List.of and Map.of